Enforce non-overlapping include_dirs.
Added:
* Assertion check to enforce non-overlapping include_dirs; which may lead to a
  hard to diagnose error 'syntax error in file' when files are correctly
  formatted. Included directories may NOT be included twice.

Changed:
* Updated data annotations to v2 (no user visible changes).
* Enforce deprecated variable checks.
* no_log remove until data tagging is available in ansible.

--- a/defaults/main/config/pg_hba.yml
+++ b/defaults/main/config/pg_hba.yml
@@ -161,6 +161,8 @@ postgres_cfg_hba:
 #   {FILE}: Must end in '.conf' and not be hidden dotfiles (.{FILE}).
 #        *: Processed in file name order (C locale rules) - numbers before
 #           letters, and uppercase before lowercase.
+#        *: Cannot overlap directories with postgres_cfg_include_dir,
+#           postgres_cfg_ident_include_dir.
 #
 # Default: [].
 postgres_cfg_hba_include_dir: []
