Migrate to Debian 13.x (Trixie).
Fixed:
* TODO(17+): Remove variable renaming check on next major postgres release.

--- a/molecule/assert_requirements/verify.yml
+++ b/molecule/assert_requirements/verify.yml
@@ -5,4 +5,9 @@
   tasks:
     - name: 'Verify | PASS ✔'
       ansible.builtin.debug:
-        msg: '✔ Tests PASSED during converge.'
+        msg: |
+          ╭───────────────────────────────────────────────────────────────────╮
+          │                                                                   │
+          │                   Tests PASSED during converge.                   │
+          │                                                                   │
+          ╰───────────────────────────────────────────────────────────────────╯
