--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -13,8 +13,11 @@
       - not postgres_cfg_hba_include_dir | intersect(postgres_cfg_include_dir + postgres_cfg_ident_include_dir) | length > 0
       - not postgres_cfg_ident_include_dir | intersect(postgres_cfg_include_dir + postgres_cfg_hba_include_dir) | length > 0
     fail_msg: |
-      ✘ Cannot overlap include_dir directives.
-
-      postgres_cfg_include_dir: '{{ postgres_cfg_include_dir | join(",") }}'
-      postgres_cfg_hba_include_dir: '{{ postgres_cfg_hba_include_dir | join(",")}}'
-      postgres_cfg_ident_include_dir: '{{ postgres_cfg_ident_include_dir | join(",") }}'
+      ╭───────────────────────────────────────────────────────────────────╮
+      │                                                                   │
+      │              Cannot overlap include_dir directives.               │
+      │                                                                   │
+      ├───────────────────────────────────────────────────────────────────╯
+      │ postgres_cfg_include_dir: {{ postgres_cfg_include_dir | join(",") }}
+      │ postgres_cfg_hba_include_dir: {{ postgres_cfg_hba_include_dir | join(",")}}
+      │ postgres_cfg_ident_include_dir: {{ postgres_cfg_ident_include_dir | join(",") }}
