--- a/tasks/validate.yml
+++ b/tasks/validate.yml
@@ -15,6 +15,12 @@
   ansible.builtin.assert:
     quiet: true
     that: ansible_facts.services[item].state == 'running'
-    fail_msg: '✘ {{ item }} should be running.'
+    fail_msg: |
+      ╭───────────────────────────────────────────────────────────────────╮
+      │                                                                   │
+      │                     Service failed to start.                      │
+      │                                                                   │
+      ├───────────────────────────────────────────────────────────────────╯
+      │ {{ item }}
   loop:
     - 'postgresql@{{ _postgres_srv_version.raw }}-main.service'
