--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -39,7 +39,7 @@
   when: not _postgres_init.stat.exists
   ansible.builtin.command:
     argv:
-      - '{{ _postgres_cfg_data_directory.role_initdb }}'
+      - '{{ _postgres_cfg_data_directory._initdb }}'
       - '-D'
       - '{{ _postgres_cfg_data_directory.raw }}'
   become: true
@@ -52,26 +52,26 @@
     - name: 'Config | enable backups | set backup directory'
       ansible.builtin.file:
         dest: '{{ _postgres_cfg_databases_backup_dir.raw }}'
-        owner: '{{ _postgres_srv_user.role_uid }}'
-        group: '{{ _postgres_srv_group.role_gid }}'
+        owner: '{{ _postgres_srv_user._uid }}'
+        group: '{{ _postgres_srv_group._gid }}'
         mode: '0755'
         state: 'directory'
 
     - name: 'Config | enable backups | set scripts directory'
       ansible.builtin.file:
         dest: '{{ _postgres.scripts }}'
-        owner: '{{ _postgres_srv_user.role_uid }}'
-        group: '{{ _postgres_srv_group.role_gid }}'
+        owner: '{{ _postgres_srv_user._uid }}'
+        group: '{{ _postgres_srv_group._gid }}'
         mode: '0755'
         state: 'directory'
 
     - name: 'Config | enable backups | set backup script'
       ansible.builtin.template:
         src: 'postgres_backup.j2'
-        dest: '{{ _postgres_cfg_databases_backup_enable.role_backup_script }}'
-        owner: '{{ _postgres_srv_user.role_uid }}'
-        group: '{{ _postgres_srv_group.role_gid }}'
-        mode: '{{ _postgres_cfg_databases_backup_enable.role_perms }}'
+        dest: '{{ _postgres_cfg_databases_backup_enable._backup_script }}'
+        owner: '{{ _postgres_srv_user._uid }}'
+        group: '{{ _postgres_srv_group._gid }}'
+        mode: '{{ _postgres_cfg_databases_backup_enable._perms }}'
 
     - name: 'Config | enable backups | create backup service'
       ansible.builtin.include_role:
@@ -88,7 +88,7 @@
               type: 'simple'
               exec_start:
                 - '{{
-                    _postgres_cfg_databases_backup_enable.role_backup_script
+                    _postgres_cfg_databases_backup_enable._backup_script
                   }}'
             exec:
               user: 'root'
@@ -98,7 +98,7 @@
             state: 'present'
             drop_in: false
             unit:
-              description: 'MariaDB backup service timer.'
+              description: 'Postgres backup service timer.'
             timer:
               unit: 'postgres_backup.service'
               on_calendar:
@@ -111,7 +111,7 @@
   block:
     - name: 'Config | disable backups | set backup script'
       ansible.builtin.file:
-        dest: '{{ _postgres_cfg_databases_backup_enable.role_backup_script }}'
+        dest: '{{ _postgres_cfg_databases_backup_enable._backup_script }}'
         state: 'absent'
 
     - name: 'Config | disable backups | remove backup service'
@@ -130,9 +130,9 @@
 - name: 'Config | create data directory'
   ansible.builtin.file:
     path: '{{ _postgres_cfg_data_directory.raw }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_data_directory.role_perms }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_data_directory._perms }}'
     state: 'directory'
   become: true
   become_user: '{{
@@ -143,26 +143,26 @@
 
 - name: 'Config | create HBA directory'
   ansible.builtin.file:
-    path: '{{ _postgres_cfg_hba_file.role_hba_dir }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_hba_file.role_hba_dir_perms }}'
+    path: '{{ _postgres_cfg_hba_file._hba_dir }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_hba_file._hba_dir_perms }}'
     state: 'directory'
 
 - name: 'Config | create ident directory'
   ansible.builtin.file:
-    path: '{{ _postgres_cfg_ident_file.role_ident_dir }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_ident_file.role_ident_dir_perms }}'
+    path: '{{ _postgres_cfg_ident_file._ident_dir }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_ident_file._ident_dir_perms }}'
     state: 'directory'
 
 - name: 'Config | create PID directory'
   ansible.builtin.file:
-    path: '{{ _postgres_cfg_external_pid_file.role_pid_dir }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_external_pid_file.role_perms }}'
+    path: '{{ _postgres_cfg_external_pid_file._pid_dir }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_external_pid_file._perms }}'
     state: 'directory'
 
 # Custom data directories require setting shell environments correctly so they
@@ -171,86 +171,86 @@
   when: _postgres_srv_profile_path.raw | length == 0
   ansible.builtin.template:
     src: 'postgres.j2'
-    dest: '{{ _postgres_srv_profile_path.role_dest }}'
+    dest: '{{ _postgres_srv_profile_path._dest }}'
     owner: 'root'
     group: 'root'
-    mode: '{{ _postgres_srv_profile_path.role_perms }}'
+    mode: '{{ _postgres_srv_profile_path._perms }}'
 
 - name: 'Config | set custom postgres global environment profile'
   when: _postgres_srv_profile_path.raw | length > 0
   ansible.builtin.copy:
-    src: '{{ _postgres_srv_profile_path.role_src }}'
-    dest: '{{ _postgres_srv_profile_path.role_dest }}'
+    src: '{{ _postgres_srv_profile_path._src }}'
+    dest: '{{ _postgres_srv_profile_path._dest }}'
     owner: 'root'
     group: 'root'
-    mode: '{{ _postgres_srv_profile_path.role_perms }}'
+    mode: '{{ _postgres_srv_profile_path._perms }}'
     force: true
 
 - name: 'Config | set database owner script'
   ansible.builtin.template:
     src: 'postgres_owner.j2'
-    dest: '{{ _postgres_cfg_databases.role_owner_script }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_databases.role_perms }}'
+    dest: '{{ _postgres_cfg_databases._owner_script }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_databases._perms }}'
 
 - name: 'Config | set conf.d'
   when: _postgres_srv_confd_path.raw | length > 0
   ansible.builtin.copy:
-    src: '{{ _postgres_srv_confd_path.role_src }}'
-    dest: '{{ _postgres_srv_confd_path.role_dest }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_srv_confd_path.role_perms }}'
+    src: '{{ _postgres_srv_confd_path._src }}'
+    dest: '{{ _postgres_srv_confd_path._dest }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_srv_confd_path._perms }}'
     force: true
 
 - name: 'Config | set environment'
   ansible.builtin.template:
     src: 'environment.j2'
-    dest: '{{ _postgres_cfg_environment.role_dest }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_environment.role_perms }}'
+    dest: '{{ _postgres_cfg_environment._dest }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_environment._perms }}'
 
 - name: 'Config | set postgresql.conf'
   ansible.builtin.template:
     src: 'postgresql.conf.j2'
     dest: '{{ _postgres.postgresql }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
     mode: '0644'
 
 - name: 'Config | set pg_ctl.conf'
   ansible.builtin.template:
     src: 'pg_ctl.conf.j2'
-    dest: '{{ _postgres_cfg_ctl.role_file }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_ctl.role_perms }}'
+    dest: '{{ _postgres_cfg_ctl._file }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_ctl._perms }}'
 
 - name: 'Config | set pg_hba.conf'
   ansible.builtin.template:
     src: 'pg_hba.conf.j2'
     dest: '{{ _postgres_cfg_hba_file.raw }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_hba_file.role_perms }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_hba_file._perms }}'
 
 - name: 'Config | set pg_ident.conf'
   ansible.builtin.template:
     src: 'pg_ident.conf.j2'
     dest: '{{ _postgres_cfg_ident_file.raw }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_cfg_ident_file.role_perms }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_cfg_ident_file._perms }}'
 
 - name: 'Config | set start.conf'
   ansible.builtin.template:
     src: 'start.conf.j2'
-    dest: '{{ _postgres_srv_startup.role_dest }}'
-    owner: '{{ _postgres_srv_user.role_uid }}'
-    group: '{{ _postgres_srv_group.role_gid }}'
-    mode: '{{ _postgres_srv_startup.role_perms }}'
+    dest: '{{ _postgres_srv_startup._dest }}'
+    owner: '{{ _postgres_srv_user._uid }}'
+    group: '{{ _postgres_srv_group._gid }}'
+    mode: '{{ _postgres_srv_startup._perms }}'
 
 - name: 'Config | start services'
   ansible.builtin.systemd:
