--- a/vars/main/main.yml
+++ b/vars/main/main.yml
@@ -15,7 +15,7 @@
 #   * Use configuration docs to add new variables.
 #   * Use defaults/ to remove any changed/deprecated variables.
 # * Update tests for any changes.
-# * Standard role validation testing (yamllint, ansible-lint, todo, noqa).
+# * Standard role validation testing (yamllint, ansible-lint, to-do, no-qa).
 # * Tag with MAJOR.MINOR.PATCH[ROLE] version, with PATCH representing role
 #   change - e.g. Postgres: 17.x -> Role: 17.0.1  (1 role release).
 
