--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -91,8 +91,8 @@
                     _postgres_cfg_databases_backup_enable._backup_script
                   }}'
             exec:
-              user: 'root'
-              group: 'root'
+              user: '{{ _postgres_srv_user.raw }}'
+              group: '{{ _postgres_srv_group.raw }}'
         systemd_timers:
           - name: 'postgres_backup'
             state: 'present'
